Fix profile avatar distortions

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,10 +24,3 @@
     width: 100px;
     height: 30px;
 }
-
-.image {
-  height: 50px;
-  margin: 10px;
-  border: 2.5px solid #444A6E;
-  border-radius: 100px;
-}
