--- a/src/components/MainPage2.css
+++ b/src/components/MainPage2.css
@@ -135,11 +135,3 @@ body, html, #root {
 .friend-answer {
     font-size: 14px;
 }
-
-
-.image {
-  height: 50px;
-  margin: 10px;
-  border: 2.5px solid #444A6E;
-  border-radius: 100px;
-}
